# Restorrente

./: .gitignore  CMakeLists.txt  README.md
consultas/: CMakeLists.txt  constants.h  main.cpp
consultas/logger/: logger.h
corte/: CMakeLists.txt  MemoriaCompartida.h  main.cpp  types.h
corte/logger/: logger.cpp  mensajes.h
diners/: CMakeLists.txt  comensales  main.cpp
diners/parser/: Parser.h  json.hpp
diners/procesos/: Diner.h
diners/utils/: Serializador.cpp
diners/utils/ipcs/: Fifo.cpp  Fifo.h  Lock.cpp  Semaforo.cpp  Semaforo.h
diners/utils/ipcs/signals/: SENAL_CORTE_Handler.h  SENAL_SALIDA_Handler.h  SignalHandler.cpp
src/: main.cpp
src/config/: config.json
src/logger/: mensajes.h
src/parser/: Parser.cpp
src/procesos/: Attendant.cpp  Attendant.h  Cook.cpp  Cook.h  Diner.cpp  Diner.h  Host.cpp  Host.h  Waiter.cpp  Waiter.h
src/utils/: Serializador.cpp  Serializador.h  constants.h  types.h
src/utils/ipcs/: Fifo.cpp  Lock.h  Semaforo.cpp
src/utils/ipcs/signals/: EventHandler.h  SENAL_AVISO_Handler.h  SENAL_CORTE_Handler.h  SENAL_SALIDA_Handler.h  SignalHandler.h
src/utils/lanzadores/: lanzadorEmpleados.h  lanzarComensales.h
